// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Has default desktop styles (defaultOpen) 1`] = `
.c3 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c3::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c3::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1[data-popper-placement*="bottom"] > .c2 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c1[data-popper-placement*="bottom"] > .c2::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c1[data-popper-placement*="bottom"] > .c2::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c1[data-popper-placement*="top"] > .c2 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c1[data-popper-placement*="top"] > .c2::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c1[data-popper-placement*="top"] > .c2::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c1[data-popper-placement*="right"] > .c2 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c1[data-popper-placement*="right"] > .c2::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c1[data-popper-placement*="left"] > .c2 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c1[data-popper-placement*="left"] > .c2::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c1[data-popper-placement*="left"] > .c2::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<Tooltip
  defaultOpen={true}
  label="Test Content"
>
  <styled.span
    aria-describedby="uuid1"
    data-testid="tooltip"
    id="tooltip-trigger-uuid1"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-describedby="uuid1"
      className="c0"
      data-testid="tooltip"
      id="tooltip-trigger-uuid1"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      <Icon
        color="#1B1C1E"
        name="info"
        size="16"
      >
        <Info
          color="#1B1C1E"
          focusable={false}
          height="16"
          width="16"
        >
          <ForwardRef
            className="lucide-info"
            color="#1B1C1E"
            focusable={false}
            height="16"
            iconNode={
              [
                [
                  "circle",
                  {
                    "cx": "12",
                    "cy": "12",
                    "key": "1mglay",
                    "r": "10",
                  },
                ],
                [
                  "path",
                  {
                    "d": "M12 16v-4",
                    "key": "1dtifu",
                  },
                ],
                [
                  "path",
                  {
                    "d": "M12 8h.01",
                    "key": "e9boi3",
                  },
                ],
              ]
            }
            width="16"
          >
            <svg
              className="lucide lucide-info"
              fill="none"
              focusable={false}
              height="16"
              stroke="#1B1C1E"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                key="1mglay"
                r="10"
              />
              <path
                d="M12 16v-4"
                key="1dtifu"
              />
              <path
                d="M12 8h.01"
                key="e9boi3"
              />
            </svg>
          </ForwardRef>
        </Info>
      </Icon>
    </span>
  </styled.span>
  <styled.div
    aria-hidden={false}
    data-popper-interactive={false}
    data-testid="tooltip-content-container"
    id="uuid1"
    isMobile={false}
    role="tooltip"
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    variant="normal"
    visible={true}
  >
    <div
      aria-hidden={false}
      className="c1"
      data-popper-interactive={false}
      data-testid="tooltip-content-container"
      id="uuid1"
      role="tooltip"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <styled.div
        data-popper-arrow={true}
        style={
          {
            "position": "absolute",
          }
        }
      >
        <div
          className="c2 c3"
          data-popper-arrow={true}
          style={
            {
              "position": "absolute",
            }
          }
        />
      </styled.div>
      <styled.div>
        <div
          className="c4"
        >
          Test Content
        </div>
      </styled.div>
    </div>
  </styled.div>
</Tooltip>
`;

exports[`Tooltip Has default desktop styles 1`] = `
.c3 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c3::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c3::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1[data-popper-placement*="bottom"] > .c2 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c1[data-popper-placement*="bottom"] > .c2::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c1[data-popper-placement*="bottom"] > .c2::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c1[data-popper-placement*="top"] > .c2 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c1[data-popper-placement*="top"] > .c2::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c1[data-popper-placement*="top"] > .c2::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c1[data-popper-placement*="right"] > .c2 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c1[data-popper-placement*="right"] > .c2::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c1[data-popper-placement*="left"] > .c2 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c1[data-popper-placement*="left"] > .c2::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c1[data-popper-placement*="left"] > .c2::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<Tooltip
  label="Test Content"
>
  <styled.span
    aria-describedby="uuid1"
    data-testid="tooltip"
    id="tooltip-trigger-uuid1"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-describedby="uuid1"
      className="c0"
      data-testid="tooltip"
      id="tooltip-trigger-uuid1"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      <Icon
        color="#1B1C1E"
        name="info"
        size="16"
      >
        <Info
          color="#1B1C1E"
          focusable={false}
          height="16"
          width="16"
        >
          <ForwardRef
            className="lucide-info"
            color="#1B1C1E"
            focusable={false}
            height="16"
            iconNode={
              [
                [
                  "circle",
                  {
                    "cx": "12",
                    "cy": "12",
                    "key": "1mglay",
                    "r": "10",
                  },
                ],
                [
                  "path",
                  {
                    "d": "M12 16v-4",
                    "key": "1dtifu",
                  },
                ],
                [
                  "path",
                  {
                    "d": "M12 8h.01",
                    "key": "e9boi3",
                  },
                ],
              ]
            }
            width="16"
          >
            <svg
              className="lucide lucide-info"
              fill="none"
              focusable={false}
              height="16"
              stroke="#1B1C1E"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                key="1mglay"
                r="10"
              />
              <path
                d="M12 16v-4"
                key="1dtifu"
              />
              <path
                d="M12 8h.01"
                key="e9boi3"
              />
            </svg>
          </ForwardRef>
        </Info>
      </Icon>
    </span>
  </styled.span>
  <styled.div
    aria-hidden={true}
    data-popper-interactive={false}
    data-testid="tooltip-content-container"
    id="uuid1"
    isMobile={false}
    role="tooltip"
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    variant="normal"
    visible={false}
  >
    <div
      aria-hidden={true}
      className="c1"
      data-popper-interactive={false}
      data-testid="tooltip-content-container"
      id="uuid1"
      role="tooltip"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <styled.div
        data-popper-arrow={true}
        style={
          {
            "position": "absolute",
          }
        }
      >
        <div
          className="c2 c3"
          data-popper-arrow={true}
          style={
            {
              "position": "absolute",
            }
          }
        />
      </styled.div>
      <styled.div>
        <div
          className="c4"
        >
          Test Content
        </div>
      </styled.div>
    </div>
  </styled.div>
</Tooltip>
`;

exports[`Tooltip Has mobile styles (defaultOpen) 1`] = `
.c3 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c3::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c3::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0;
  max-width: 327px;
  min-height: 72px;
  padding: 1px var(--spacing-3x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1[data-popper-placement*="bottom"] > .c2 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c1[data-popper-placement*="bottom"] > .c2::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c1[data-popper-placement*="bottom"] > .c2::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c1[data-popper-placement*="top"] > .c2 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c1[data-popper-placement*="top"] > .c2::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c1[data-popper-placement*="top"] > .c2::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c1[data-popper-placement*="right"] > .c2 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c1[data-popper-placement*="right"] > .c2::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c1[data-popper-placement*="left"] > .c2 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c1[data-popper-placement*="left"] > .c2::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c1[data-popper-placement*="left"] > .c2::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<Tooltip
  defaultOpen={true}
  label="Test Content"
>
  <styled.span
    aria-describedby="uuid1"
    data-testid="tooltip"
    id="tooltip-trigger-uuid1"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-describedby="uuid1"
      className="c0"
      data-testid="tooltip"
      id="tooltip-trigger-uuid1"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      <Icon
        color="#1B1C1E"
        name="info"
        size="24"
      >
        <Info
          color="#1B1C1E"
          focusable={false}
          height="24"
          width="24"
        >
          <ForwardRef
            className="lucide-info"
            color="#1B1C1E"
            focusable={false}
            height="24"
            iconNode={
              [
                [
                  "circle",
                  {
                    "cx": "12",
                    "cy": "12",
                    "key": "1mglay",
                    "r": "10",
                  },
                ],
                [
                  "path",
                  {
                    "d": "M12 16v-4",
                    "key": "1dtifu",
                  },
                ],
                [
                  "path",
                  {
                    "d": "M12 8h.01",
                    "key": "e9boi3",
                  },
                ],
              ]
            }
            width="24"
          >
            <svg
              className="lucide lucide-info"
              fill="none"
              focusable={false}
              height="24"
              stroke="#1B1C1E"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                key="1mglay"
                r="10"
              />
              <path
                d="M12 16v-4"
                key="1dtifu"
              />
              <path
                d="M12 8h.01"
                key="e9boi3"
              />
            </svg>
          </ForwardRef>
        </Info>
      </Icon>
    </span>
  </styled.span>
  <styled.div
    aria-hidden={false}
    data-popper-interactive={false}
    data-testid="tooltip-content-container"
    id="uuid1"
    isMobile={true}
    role="tooltip"
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    variant="normal"
    visible={true}
  >
    <div
      aria-hidden={false}
      className="c1"
      data-popper-interactive={false}
      data-testid="tooltip-content-container"
      id="uuid1"
      role="tooltip"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <styled.div
        data-popper-arrow={true}
        style={
          {
            "position": "absolute",
          }
        }
      >
        <div
          className="c2 c3"
          data-popper-arrow={true}
          style={
            {
              "position": "absolute",
            }
          }
        />
      </styled.div>
      <styled.div>
        <div
          className="c4"
        >
          Test Content
        </div>
      </styled.div>
    </div>
  </styled.div>
</Tooltip>
`;

exports[`Tooltip Has mobile styles 1`] = `
.c3 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c3::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c3::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0;
  max-width: 327px;
  min-height: 72px;
  padding: 1px var(--spacing-3x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1[data-popper-placement*="bottom"] > .c2 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c1[data-popper-placement*="bottom"] > .c2::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c1[data-popper-placement*="bottom"] > .c2::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c1[data-popper-placement*="top"] > .c2 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c1[data-popper-placement*="top"] > .c2::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c1[data-popper-placement*="top"] > .c2::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c1[data-popper-placement*="right"] > .c2 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c1[data-popper-placement*="right"] > .c2::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c1[data-popper-placement*="left"] > .c2 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c1[data-popper-placement*="left"] > .c2::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c1[data-popper-placement*="left"] > .c2::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<Tooltip
  label="Test Content"
>
  <styled.span
    aria-describedby="uuid1"
    data-testid="tooltip"
    id="tooltip-trigger-uuid1"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-describedby="uuid1"
      className="c0"
      data-testid="tooltip"
      id="tooltip-trigger-uuid1"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      <Icon
        color="#1B1C1E"
        name="info"
        size="24"
      >
        <Info
          color="#1B1C1E"
          focusable={false}
          height="24"
          width="24"
        >
          <ForwardRef
            className="lucide-info"
            color="#1B1C1E"
            focusable={false}
            height="24"
            iconNode={
              [
                [
                  "circle",
                  {
                    "cx": "12",
                    "cy": "12",
                    "key": "1mglay",
                    "r": "10",
                  },
                ],
                [
                  "path",
                  {
                    "d": "M12 16v-4",
                    "key": "1dtifu",
                  },
                ],
                [
                  "path",
                  {
                    "d": "M12 8h.01",
                    "key": "e9boi3",
                  },
                ],
              ]
            }
            width="24"
          >
            <svg
              className="lucide lucide-info"
              fill="none"
              focusable={false}
              height="24"
              stroke="#1B1C1E"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                key="1mglay"
                r="10"
              />
              <path
                d="M12 16v-4"
                key="1dtifu"
              />
              <path
                d="M12 8h.01"
                key="e9boi3"
              />
            </svg>
          </ForwardRef>
        </Info>
      </Icon>
    </span>
  </styled.span>
  <styled.div
    aria-hidden={true}
    data-popper-interactive={false}
    data-testid="tooltip-content-container"
    id="uuid1"
    isMobile={true}
    role="tooltip"
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    variant="normal"
    visible={false}
  >
    <div
      aria-hidden={true}
      className="c1"
      data-popper-interactive={false}
      data-testid="tooltip-content-container"
      id="uuid1"
      role="tooltip"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <styled.div
        data-popper-arrow={true}
        style={
          {
            "position": "absolute",
          }
        }
      >
        <div
          className="c2 c3"
          data-popper-arrow={true}
          style={
            {
              "position": "absolute",
            }
          }
        />
      </styled.div>
      <styled.div>
        <div
          className="c4"
        >
          Test Content
        </div>
      </styled.div>
    </div>
  </styled.div>
</Tooltip>
`;
